# chessbik-board

./: Cargo.toml
src/: cube_rotations_field.rs  eval.rs  get_available_moves.rs  get_eval.rs  get_piece.rs  into_piece_descriptor.rs  lib.rs  piece_position.rs  shape_geodesic_field.rs  side.rs
src/board/: mod.rs
src/board/impls/: board_new.rs  default.rs  deserialize.rs  get_available_moves.rs  get_eval.rs  mod.rs  print_debug.rs  serialize.rs  visitor.rs
src/board_status/: mod.rs
src/cell/: mod.rs
src/cell/impls/: board_new.rs  display.rs  mod.rs
src/cube_rotation/: mod.rs
src/ext/: board_new.rs  board_print_debug.rs  board_transform.rs  field_new.rs  field_print_debug.rs  get_available_moves.rs  mod.rs
src/piece/: mod.rs
src/piece/color/: mod.rs
src/piece/color/impls/: get_eval.rs  mod.rs
src/piece/impls/: deserialize.rs  display.rs  get_available_moves.rs  get_eval.rs  get_piece.rs  into_piece_descriptor.rs  mod.rs  serialize.rs  visitor.rs
src/piece/ty/: mod.rs
src/piece/ty/impls/: get_eval.rs  mod.rs
src/piece_descriptor/: mod.rs
src/piece_descriptor/impls/: display.rs  into_piece_descriptor.rs  mod.rs
src/piece_move/: mod.rs  ty.rs
src/piece_move/impls/: mod.rs
src/piece_orientation/: mod.rs
src/piece_orientation/impls/: default.rs  mod.rs
